feat(tools): add read_files batch tool and refactor projectRoot sandboxing